Fixed the image distortion in reposive devices

--- a/style.css
+++ b/style.css
@@ -2,12 +2,14 @@ html {
     scroll-behavior: smooth;
 }
 
-
 *{
     background-color: #f0eee9;
     font-family: sans-serif;
     font-size: 20px;
+    padding: 0;
+    margin: 0;
 }
+
 
 header{
     color: #0d81c0;
@@ -50,23 +52,22 @@ header{
     color:#f0eee9;
 }
 #hero{
-    width: 700px;
+    max-width: 700px;
     border: 2px solid black;
     border-radius: 20px;
+    height: auto;
 }
 .hero-content{
+    max-width: 100%;
     display: flex;
-    grid-template-columns: 1fr 1fr;
-    grid-template-columns: auto auto;
     gap: 20px;                       
     align-items: center;
+    overflow: hidden;
 }
 
 .hero-image{
-    grid-column: 2;
-    grid-row: span 2;
     padding-right: 50px;
-    object-fit: fit;
+    object-fit: contain;
 }
 
 .hero-c{
@@ -76,8 +77,6 @@ header{
 #hero-heading{
     font-family: sans-serif;
     color: #0d81c0;
-    grid-column: 1;
-    grid-row: 1;
 }
 
 #hero-heading h1{
@@ -95,6 +94,7 @@ header{
 #About{
     display: block;
     text-align: center;
+    padding: 20px;
 }
 
 #a-title{
@@ -158,14 +158,14 @@ header{
     align-items: start;
     gap: 50px;
     margin: 50px;
+    padding: 50px;
 }
 
 #prod > *{
     border: 2px solid #f0eee9;
     border-radius: 15px;
     background-color: #0d81c0;
-    padding: 30px;
-    height: 450px;
+    padding: 70px;
 }
 
 #prod p{
@@ -175,6 +175,16 @@ header{
     font-size: 20px;
 }
 
+.scent{
+    padding: 30px;
+}
+
+.basic{
+    padding-bottom: 50px;
+}
+.ink{
+    padding: 30px;
+}
 .prod1{
     align-items: center;
 }
@@ -193,6 +203,10 @@ header{
 }
 .l img{
     width: 250px;
+}
+
+#review{
+    overflow: hidden;
 }
 
 .container{
@@ -236,7 +250,9 @@ button:hover{
     .price-cards{
         flex-direction: column;
     }
-
+    #logo{
+        width: 200px;
+    }
     .values{
         grid-template-columns: 1fr;
     }
@@ -244,8 +260,24 @@ button:hover{
         grid-template-columns: 1fr;
     }
 
-    .hero-content{
+    #hero {
+        width: 100%;       
+        max-width: 100%;   
+        height: auto;
+        margin: 0 auto;
+    }
+
+    .hero-content {
         flex-direction: column;
+        padding: 10px;
+    }
+
+    
+    .hero-image {
+        width: 100%;       
+        height: auto;      
+        padding-right: 0; 
+        object-fit: contain; 
     }
 
     .sider{
